--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/activity/_activity_feed.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/activity/_activity_feed.scss
@@ -1595,9 +1595,8 @@ div[class*="attached-gif-container"] {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: var(--bb-rl-space-100) 0;
+	padding: var(--bb-rl-space-100) 0 0;
 	border-top: 1px solid var(--bb-rl-border-secondary-color);
-	border-bottom: 1px solid var(--bb-rl-border-secondary-color);
 
 	.activity-state {
 		display: flex;
